--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:text="Login"/>
 
     <EditText
-        android:id="@+id/et_username"
+        android:id="@+id/usernameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
@@ -41,7 +41,7 @@
         android:layout_marginLeft="10sp"/>
 
     <EditText
-        android:id="@+id/et_pass"
+        android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
