--- a/app/src/main/res/layout/activity_admin_catalog.xml
+++ b/app/src/main/res/layout/activity_admin_catalog.xml
@@ -32,11 +32,13 @@
 
 
             />
-        <ImageView
-
+        <ImageButton
             android:src="@drawable/icon_logout"
+            android:id="@+id/buttonAdmin"
+            android:background="#00ffffff"
             android:gravity="right"
             android:padding="15dp" />
+
     </TableRow>
 
 
