--- a/app/src/main/res/layout/activity_home_user.xml
+++ b/app/src/main/res/layout/activity_home_user.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
 
             android:layout_column="1"
-            android:text="Hello, Will"
+            android:text="Summit Stock"
             android:textColor="#000"
             android:padding="10dp"
             android:textSize="25dp"
@@ -30,6 +30,7 @@
         <ImageButton
             android:src="@drawable/icon_logout"
             android:id="@+id/buttonAdmin"
+            android:background="#00ffffff"
             android:gravity="right"
             android:padding="15dp" />
 
