--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Register"
-    android:orientation="vertical">
+    tools:context=".Login"
+    android:orientation="vertical"
+    >
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="406dp"
+        android:layout_width="match_parent"
         android:layout_height="349dp"
-        app:srcCompat="@drawable/intersect"
+        android:src="@drawable/intersect"
         tools:layout_editor_absoluteX="2dp"
         tools:layout_editor_absoluteY="3dp" />
     <TextView
@@ -21,9 +22,10 @@
         android:textSize="50sp"
         android:fontFamily="@font/poppins_regular"
         android:textStyle="bold"
-        android:text="Register"/>
+        android:text="Login"/>
 
     <EditText
+        android:id="@+id/usernameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
@@ -40,6 +42,7 @@
         android:layout_marginLeft="10sp"/>
 
     <EditText
+        android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
@@ -56,15 +59,34 @@
         android:layout_marginLeft="10sp"/>
 
     <Button
-        android:id="@+id/buttonRegister"
-        android:textSize="25sp"
+        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/buttonLogin"
         android:fontFamily="@font/poppins_regular"
-        android:text="REGISTER"
+        android:text="LOGIN"
         android:backgroundTint="#2E4F4F"
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
         />
+
+    <TextView
+        android:id="@+id/register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:hint="Don't have account?"
+        android:textSize="15sp" />
+
+    <Button
+        android:id="@+id/btn_reg"
+        android:layout_width="match_parent"
+        android:layout_height="33dp"
+        android:backgroundTint="@color/white"
+        android:gravity="center"
+        android:text="Register"
+        android:textColor="@color/black"
+        android:textSize="8sp" />
+
 
 </LinearLayout>
