--- a/app/src/main/res/layout/activity_admin_catalog.xml
+++ b/app/src/main/res/layout/activity_admin_catalog.xml
@@ -1,40 +1,35 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    android:orientation="vertical"
-    android:paddingStart="20dp"
-    android:paddingEnd="20dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    tools:context=".AdminCatalog"
     android:paddingTop="10dp">
 
     <!-- Header -->
+
     <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="#ffffff"
         android:gravity="center_vertical">
-
         <TextView
             android:fontFamily="@font/poppins_bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello, Admin"
+            android:layout_column="1"
+            android:text="Hello, Will"
             android:textColor="#000"
             android:padding="10dp"
-            android:textSize="25dp"
-            android:layout_marginRight="102dp"/>
-
+            android:textSize="25dp" />
         <ImageButton
             android:src="@drawable/icon_logout"
             android:id="@+id/buttonAdmin"
             android:background="#00ffffff"
             android:gravity="right"
             android:padding="15dp"
-            android:layout_height="40dp"
-            android:layout_width="40dp"/>
+            android:layout_marginLeft="115dp"/>
     </TableRow>
 
     <!-- Search Input -->
@@ -42,14 +37,19 @@
         android:id="@+id/layoutSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         app:startIconDrawable="@drawable/search"
         app:endIconMode="clear_text">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtSearch"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:inputType="text"
             android:textColor="@color/black"
             android:imeOptions="actionSearch"
@@ -57,26 +57,23 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Product Display -->
-    <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:scrollbars="none">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <TableLayout
-        android:stretchColumns="*"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-
-        <TableLayout
-            android:stretchColumns="*"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+            <!-- Custom Card Pertama -->
             <LinearLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
@@ -91,7 +88,6 @@
                 android:padding="10dp">
 
                 <ImageView
-
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:src="@drawable/imagessb"
@@ -101,7 +97,7 @@
                     android:outlineProvider="background"/>
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
@@ -137,267 +133,48 @@
 
                 </LinearLayout>
 
-                <ImageButton
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/icon_update"
-                    android:background="@drawable/round_update"/>
-            </LinearLayout>
-        </TableLayout>
-    </TableLayout>
-
-    <TableLayout
-        android:stretchColumns="*"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-
-        <TableLayout
-            android:stretchColumns="*"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@drawable/background_admin_card"
-                android:clipToOutline="true"
-                android:layout_marginHorizontal="10dp"
-                android:outlineProvider="background"
-                android:scaleType="centerCrop"
-                android:layout_marginBottom="10dp"
-                android:padding="10dp">
-
-                <ImageView
-
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/imagessb"
-                    android:scaleType="centerCrop"
-                    android:background="@drawable/round_image"
-                    android:clipToOutline="true"
-                    android:outlineProvider="background"/>
-
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
                     android:paddingLeft="10dp">
 
-                    <TextView
-                        android:fontFamily="@font/poppins_semibold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="Sleeping Bag"
-                        android:textColor="#fff"
-                        android:textSize="13dp"/>
+                    <ImageButton
+                        android:id="@+id/updateButton"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/icon_update"
+                        android:background="@drawable/round_update"
+                        android:layout_marginBottom="20dp"/>
 
-                    <TextView
-                        android:fontFamily="@font/poppins_regular"
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
-                        android:textColor="#fff"
-                        android:textSize="10dp"
-                        android:paddingBottom="1dp"/>
-
-                    <TextView
-                        android:fontFamily="@font/poppins_medium"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="RP. 22.000,- / day"
-                        android:textColor="#fff"
-                        android:paddingTop="1dp"
-                        android:textSize="11dp"/>
+                    <ImageButton
+                        android:id="@+id/deleteButton"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/icon_delete"
+                        android:background="@drawable/round_update"
+                        android:layout_marginTop="2dp"/>
 
                 </LinearLayout>
-
-                <ImageButton
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/icon_update"
-                    android:background="@drawable/round_update"/>
             </LinearLayout>
-        </TableLayout>
-    </TableLayout>
 
-    <TableLayout
-        android:stretchColumns="*"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
 
-        <TableLayout
-            android:stretchColumns="*"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@drawable/background_admin_card"
-                android:clipToOutline="true"
-                android:layout_marginHorizontal="10dp"
-                android:outlineProvider="background"
-                android:scaleType="centerCrop"
-                android:layout_marginBottom="10dp"
-                android:padding="10dp">
-
-                <ImageView
-
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/imagessb"
-                    android:scaleType="centerCrop"
-                    android:background="@drawable/round_image"
-                    android:clipToOutline="true"
-                    android:outlineProvider="background"/>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:paddingLeft="10dp">
-
-                    <TextView
-                        android:fontFamily="@font/poppins_semibold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="Sleeping Bag"
-                        android:textColor="#fff"
-                        android:textSize="13dp"/>
-
-                    <TextView
-                        android:fontFamily="@font/poppins_regular"
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
-                        android:textColor="#fff"
-                        android:textSize="10dp"
-                        android:paddingBottom="1dp"/>
-
-                    <TextView
-                        android:fontFamily="@font/poppins_medium"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="RP. 22.000,- / day"
-                        android:textColor="#fff"
-                        android:paddingTop="1dp"
-                        android:textSize="11dp"/>
-
-                </LinearLayout>
-
-                <ImageButton
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/icon_update"
-                    android:background="@drawable/round_update"/>
-            </LinearLayout>
-        </TableLayout>
-    </TableLayout>
-
-    <TableLayout
-        android:stretchColumns="*"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-
-        <TableLayout
-            android:stretchColumns="*"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@drawable/background_admin_card"
-                android:clipToOutline="true"
-                android:layout_marginHorizontal="10dp"
-                android:outlineProvider="background"
-                android:scaleType="centerCrop"
-                android:layout_marginBottom="10dp"
-                android:padding="10dp">
-
-                <ImageView
-
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/imagessb"
-                    android:scaleType="centerCrop"
-                    android:background="@drawable/round_image"
-                    android:clipToOutline="true"
-                    android:outlineProvider="background"/>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:paddingLeft="10dp">
-
-                    <TextView
-                        android:fontFamily="@font/poppins_semibold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="Sleeping Bag"
-                        android:textColor="#fff"
-                        android:textSize="13dp"/>
-
-                    <TextView
-                        android:fontFamily="@font/poppins_regular"
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
-                        android:textColor="#fff"
-                        android:textSize="10dp"
-                        android:paddingBottom="1dp"/>
-
-                    <TextView
-                        android:fontFamily="@font/poppins_medium"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="RP. 22.000,- / day"
-                        android:textColor="#fff"
-                        android:paddingTop="1dp"
-                        android:textSize="11dp"/>
-
-                </LinearLayout>
-
-                <ImageButton
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/icon_update"
-                    android:background="@drawable/round_update"/>
-            </LinearLayout>
-        </TableLayout>
-    </TableLayout>
-
+        </LinearLayout>
+    </ScrollView>
 
 
     <!-- Floating Action Button -->
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginTop="16dp"
+        android:layout_margin="16dp"
         app:srcCompat="@drawable/icon_add"
         app:backgroundTint="#86A789"
-        app:elevation="6dp"/>
-        </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+        app:elevation="6dp" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</TableLayout>
