--- a/app/src/main/res/layout/activity_admin_catalog.xml
+++ b/app/src/main/res/layout/activity_admin_catalog.xml
@@ -58,9 +58,11 @@
 
     <!-- Product Display -->
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:background="#fff"
         >
     <ScrollView
         android:layout_width="match_parent"
@@ -146,7 +148,7 @@
                         android:layout_height="30dp"
                         android:src="@drawable/icon_update"
                         android:background="@drawable/round_update"
-                        android:layout_marginBottom="20dp"/>
+                        android:layout_marginBottom="20dp" />
 
                     <ImageButton
                         android:id="@+id/deleteButton"
