--- a/app/src/main/res/layout/activity_admin_catalog.xml
+++ b/app/src/main/res/layout/activity_admin_catalog.xml
@@ -143,7 +143,7 @@
                     android:paddingLeft="10dp">
 
                     <ImageButton
-                        android:id="@+id/updateButton"
+                        android:id="@+id/fab2"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/icon_update"
