--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="50dp"
+        android:textColor="@color/black"
         android:fontFamily="@font/poppins_medium"
         android:textStyle="bold"
         android:text="Wellcome"/>
@@ -31,6 +32,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="30dp"
+        android:textColor="@color/black"
         android:fontFamily="@font/poppins_regular"
         android:textStyle="bold"
         android:text="Summit Stock"
@@ -49,20 +51,21 @@
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
         android:layout_marginBottom="10dp"
+        android:textColor="@color/white"
         />
 
     <Button
         android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:id="@+id/buttonUser"
         android:fontFamily="@font/poppins_regular"
         android:text="LOGIN as User"
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
-        android:background="@drawable/custom_background_button"
         android:layout_marginTop="10dp"
-
+        android:background="@drawable/button_background"
         />
 
 
