--- a/app/src/main/res/layout/activity_home_user.xml
+++ b/app/src/main/res/layout/activity_home_user.xml
@@ -28,7 +28,7 @@
 
             />
         <ImageButton
-            android:src="@drawable/icon_logout"
+            android:src="@drawable/icon_close2"
             android:id="@+id/buttonAdmin"
             android:background="#00ffffff"
             android:gravity="right"
