--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,8 +46,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/buttonLogin"
         android:fontFamily="@font/poppins_regular"
-        android:text="LOGIN as Admin"
-        android:background="@drawable/custom_background_button"
+        android:textAllCaps="false"
+        android:text="Login as Admin"
+        android:background="@drawable/button_background"
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
         android:layout_marginBottom="10dp"
@@ -61,7 +62,8 @@
         android:textColor="@color/white"
         android:id="@+id/buttonUser"
         android:fontFamily="@font/poppins_regular"
-        android:text="LOGIN as User"
+        android:text="Login as User"
+        android:textAllCaps="false"
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
         android:layout_marginTop="10dp"
