--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -2,103 +2,143 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:paddingVertical="25dp"
+    android:paddingHorizontal="30dp">
 
-    <!-- Image View for Displaying Uploaded Image -->
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_height="100dp"
         android:scaleType="centerCrop"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"/>
+        android:background="@drawable/image_bottomsheet"
+        android:clipToOutline="true"
+        android:outlineProvider="background"
+        android:layout_centerHorizontal="true"/>
 
     <!-- Button to Trigger Image Selection -->
     <Button
         android:id="@+id/uploadBtnAdd"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
         android:text="Select Image"
+        android:textAllCaps="false"
         android:layout_below="@+id/imageView"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="20dp"
+        android:background="@drawable/button_background"
+        android:textColor="@color/white"
+        android:fontFamily="@font/poppins_medium"/>
 
-    <!-- Name EditText -->
     <EditText
         android:id="@+id/namaBarang"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:background="@drawable/shape_login"
+        android:layout_height="50dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:hint="Nama Barang"
         android:inputType="textPersonName"
         android:layout_below="@+id/uploadBtnAdd"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/poppins_medium"/>
 
-    <!-- Email EditText -->
     <EditText
         android:id="@+id/descBarang"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:background="@drawable/shape_login"
+        android:layout_height="50dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:hint="Deskripsi Barang"
         android:inputType="textEmailAddress"
         android:layout_below="@+id/namaBarang"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/poppins_medium"/>
+
+    <TextView
+        android:id="@+id/stokTextView"
+        android:layout_below="@+id/descBarang"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Stok Barang"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="@font/poppins_medium"
+        />
 
     <RelativeLayout
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:id="@+id/jumlahStok"
-
-        android:layout_below="@+id/descBarang"
-        android:layout_centerHorizontal="true"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:id="@+id/counter"
+        android:gravity="left"
+        android:layout_below="@id/stokTextView"
         android:layout_centerVertical="true">
-
         <TextView
             android:id="@+id/counterTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="20dp"
+            android:textSize="13dp"
             android:layout_height="wrap_content"
             android:text="0"
+            android:layout_toLeftOf="@id/incrementButton"
+            android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:textAlignment="center"
+            android:fontFamily="@font/poppins_medium"
+            />
+
 
         <Button
             android:id="@+id/incrementButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:text="+"
-            android:layout_below="@id/counterTextView"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/button_background"
+            android:textColor="@color/white"
+            android:fontFamily="@font/poppins_medium" />
 
         <Button
             android:id="@+id/decrementButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45dp"
+            android:maxWidth="45dp"
+            android:layout_height="45dp"
             android:text="-"
-            android:layout_below="@id/counterTextView"
-            android:layout_marginTop="16dp"
+            android:layout_toLeftOf="@id/counterTextView"
             android:layout_marginStart="8dp"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+            android:background="@drawable/button_background"
+            android:textColor="@color/white"
+            android:fontFamily="@font/poppins_medium" />
 
     </RelativeLayout>
 
-    <!-- Password EditText -->
     <EditText
         android:id="@+id/hargaBarang"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:background="@drawable/shape_login"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:hint="Harga Barang"
         android:inputType="numberDecimal"
-        android:layout_below="@+id/jumlahStok"
-        android:layout_marginBottom="16dp"/>
+        android:layout_below="@+id/counter"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/poppins_medium"/>
 
-    <!-- Submit Button -->
     <Button
         android:id="@+id/btnSubmit"
+        android:textAllCaps="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/hargaBarang"
+        android:text="Simpan"
+        android:background="@drawable/button_background"
+        android:textColor="@color/white"
+        android:fontFamily="@font/poppins_medium"/>
+    </RelativeLayout>
 
-        android:text="SIMPAN" />
-
-</RelativeLayout>
