--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -2,6 +2,6 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/black" />
-    <corners android:radius="20dp"></corners>
+    <solid android:color="#2E4F4F" />
+    <corners android:radius="10dp"></corners>
 </shape>
