--- a/app/src/main/res/drawable/custom_background_button.xml
+++ b/app/src/main/res/drawable/custom_background_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-        <stroke android:color="#2E4F4F" /> <!-- Replace with your desired color code -->
-        <corners android:radius="12dp" /> <!-- Replace with your desired corner radius in dp -->
+        <solid android:color="#2E4F4F" /> <!-- Replace with your desired color code -->
+        <corners android:radius="20dp" /> <!-- Replace with your desired corner radius in dp -->
 </shape>
