--- a/app/src/main/res/drawable/rounded_editext.xml
+++ b/app/src/main/res/drawable/rounded_editext.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
     <solid android:color="@color/white"/>
-    <stroke android:width="2dp" android:color="@color/black"/>
+    <stroke android:width="2dp" android:color="#95959595"/>
     <corners
         android:bottomRightRadius="10dp"
         android:bottomLeftRadius="10dp"
