--- a/app/src/main/res/layout/item_barang.xml
+++ b/app/src/main/res/layout/item_barang.xml
@@ -14,8 +14,8 @@
 
     <ImageView
         android:id="@+id/gambarBarang"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:scaleType="centerCrop"
         android:background="@drawable/round_image"
         android:clipToOutline="true"
@@ -40,19 +40,19 @@
         <TextView
             android:id="@+id/deskripsiBarang"
             android:fontFamily="@font/poppins_regular"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
+            android:layout_width="160dp"
+            android:layout_height="60dp"
             android:textColor="#fff"
             android:textSize="10dp"
             android:paddingBottom="1dp"/>
 
         <TextView
             android:id="@+id/stokBarang"
-            android:fontFamily="@font/poppins_regular"
+            android:fontFamily="@font/poppins_medium"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:textColor="#fff"
-            android:textSize="10dp"
+            android:textSize="11dp"
             android:paddingBottom="1dp"/>
 
         <TextView
