--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SummitStock" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.SummitStock" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:statusBarColor">@color/white</item>
+
 
     </style>
 
     <style name="Theme.SummitStock" parent="Base.Theme.SummitStock" />
+
+
 </resources>
